--- a/fsm-testing/strands_patrol.ini
+++ b/fsm-testing/strands_patrol.ini
@@ -11,9 +11,9 @@ path = /opt/strands/strands_catkin_ws/src/strands_morse/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
-timeout = 5,1000
-blocking = False,True
-ongoing = False,False
+timeout = 5,20
+blocking = True,True
+ongoing = True,False
 criteria = ,SCENE
 
 [component-2]
@@ -24,31 +24,31 @@ execution_host = localhost
 check_execution = True
 check_type = pid,stdout
 timeout = 5,20
-blocking = False,True
+blocking = True,True
 ongoing = True,False
 criteria = ,Received a
 
 [component-3]
 name = patroller
-command = roslaunch waypoint_patroller patroller.launch waypoints:=/home/marc/fsm-sandpit/test.csv
+command = roslaunch waypoint_patroller patroller.launch waypoints:=/home/marc/workspace/strands_ci/fsm-testing/test.csv
 path = /opt/ros/groovy/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
 timeout = 5,20
-blocking = False,True
+blocking = True,True
 ongoing = True,False
 criteria = ,Creating base movement client
 
 [component-4]
 name = topic-logger
-command = fsmrxecho amcl_pose /amcl_pose
+command = fsmrxecho odom /odom
 path = /opt/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid
 timeout = 5
-blocking = False
+blocking = True
 ongoing = True
 criteria = 
 
@@ -71,6 +71,6 @@ name = morse_startup
 namespace = http://my_namespace.com
 run_order = ('morse','nav-stack','patroller','topic-logger'),
 #run_order = ('morse',),
-run_execution_duration = 20
+run_execution_duration = 5
 result_assessment_order = ('collect-logs',),
 result_assessment_execution_duration = 1
