added ffmpeg and Xvfb

--- a/fsm-testing/strands_patrol.ini
+++ b/fsm-testing/strands_patrol.ini
@@ -2,7 +2,10 @@
 #prefix = /vol/robocup/2013/
 #release_prefix = /
 #PKG_CONFIG_PATH = /usr/lib/pkgconfig
-DISPLAY=:1003
+#DISPLAY=:100
+
+
+
 
 [component-1]
 name = morse
@@ -11,7 +14,7 @@ path = /opt/strands/strands_catkin_ws/src/strands_morse/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
-timeout = 5,20
+timeout = 10,30
 blocking = True,True
 ongoing = True,False
 criteria = ,SCENE
@@ -23,7 +26,7 @@ path = /opt/ros/groovy/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
-timeout = 5,20
+timeout = 10,30
 blocking = True,True
 ongoing = True,False
 criteria = ,Received a
@@ -35,7 +38,7 @@ path = /opt/ros/groovy/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
-timeout = 5,20
+timeout = 10,30
 blocking = True,True
 ongoing = True,False
 criteria = ,Creating base movement client
@@ -65,11 +68,36 @@ blocking = True
 ongoing = True
 criteria = 
 
+[component-6]
+name = Xvfb
+command = Xvfb -screen 0 1024x768x24 -fbdir /tmp :100
+path = /usr/bin/
+execution_host = localhost
+check_execution = True
+check_type = pid,stdout
+timeout = 10,30
+blocking = True,True
+ongoing = True,False
+criteria = ,[dix]
+
+[component-7]
+name = ffmpeg
+command = ffmpeg -f x11grab -r 25 -s 1024x768 -i :100+nomouse $FSMDAT/screen.mov
+path = /usr/bin/
+execution_host = localhost
+check_execution = True
+check_type = pid,stdout
+timeout = 10,30
+blocking = True,True
+ongoing = True,False
+criteria = ,Press ctrl-c to stop encoding
+
+
 
 [run]
 name = morse_startup
 namespace = http://my_namespace.com
-run_order = ('morse','nav-stack','patroller','topic-logger'),
+run_order = ('Xvfb', 'morse','ffmpeg','nav-stack','patroller','topic-logger'),
 #run_order = ('morse',),
 run_execution_duration = 5
 result_assessment_order = ('collect-logs',),
