* now working with fsmtest 0.12-trunk * using Xvfb and ffmpeg recording

--- a/fsm_testing/strands_patrol.ini
+++ b/fsm_testing/strands_patrol.ini
@@ -2,15 +2,15 @@
 #prefix = /vol/robocup/2013/
 #release_prefix = /
 #PKG_CONFIG_PATH = /usr/lib/pkgconfig
-#DISPLAY=:100
+DISPLAY=:100
 
 
 
 
 [component-1]
 name = morse
-command = simulator.sh uol  uol_mht.py
-path = /opt/strands/strands_catkin_ws/src/strands_morse/
+command = vglrun /opt/ros/groovy/bin/roslaunch strands_morse uol_mht_morse.launch
+path = /usr/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
@@ -33,7 +33,7 @@ criteria = ,Received a
 
 [component-3]
 name = patroller
-command = roslaunch waypoint_patroller patroller.launch waypoints:=/home/marc/workspace/strands_ci/fsm-testing/test.csv
+command = roslaunch waypoint_patroller patroller.launch waypoints:=/home/marc/test.csv
 path = /opt/ros/groovy/bin/
 execution_host = localhost
 check_execution = True
@@ -45,7 +45,7 @@ criteria = ,Creating base movement client
 
 [component-4]
 name = topic-logger
-command = fsmrxecho odom /odom
+command = fsmrxbag -a
 path = /opt/bin/
 execution_host = localhost
 check_execution = True
@@ -58,14 +58,14 @@ criteria =
 
 [component-5]
 name = collect-logs
-command = xeyes
-path = /usr/bin/
+command = ls
+path = /bin/
 execution_host = localhost
 check_execution = True
 check_type = pid
 timeout = 2
 blocking = True
-ongoing = True
+ongoing = False
 criteria = 
 
 [component-6]
@@ -82,7 +82,7 @@ criteria = ,[dix]
 
 [component-7]
 name = ffmpeg
-command = ffmpeg -f x11grab -r 25 -s 1024x768 -i :100+nomouse $FSMDAT/screen.mov
+command = ffmpeg -f x11grab -r 25 -s 1024x768 -i :100+nomouse $FSMDAT/screen.mp4
 path = /usr/bin/
 execution_host = localhost
 check_execution = True
