added roscore to make it all independent

--- a/fsm_testing/strands_patrol.ini
+++ b/fsm_testing/strands_patrol.ini
@@ -3,11 +3,24 @@
 #release_prefix = /
 #PKG_CONFIG_PATH = /usr/lib/pkgconfig
 DISPLAY=:100
+ROS_PORT=31232
+ROS_MASTER_URI=http://localhost:31232
 
 
+[component-roscore]
+name = roscore
+command = roscore -p $ROS_PORT
+path = /opt/ros/groovy/bin/
+execution_host = localhost
+check_execution = True
+check_type = pid,stdout
+timeout = 10,30
+blocking = True,True
+ongoing = True,False
+criteria = ,started core service
 
 
-[component-1]
+[component-morse]
 name = morse
 command = vglrun /opt/ros/groovy/bin/roslaunch strands_morse uol_mht_morse.launch
 path = /usr/bin/
@@ -19,7 +32,7 @@ blocking = True,True
 ongoing = True,False
 criteria = ,SCENE
 
-[component-2]
+[component-nav]
 name = nav-stack
 command = roslaunch strands_morse uol_mht_nav2d.launch
 path = /opt/ros/groovy/bin/
@@ -31,7 +44,7 @@ blocking = True,True
 ongoing = True,False
 criteria = ,Received a
 
-[component-3]
+[component-patroller]
 name = patroller
 command = roslaunch waypoint_patroller patroller.launch waypoints:=/home/marc/test.csv
 path = /opt/ros/groovy/bin/
@@ -43,7 +56,7 @@ blocking = True,True
 ongoing = True,False
 criteria = ,Creating base movement client
 
-[component-4]
+[component-rosbag]
 name = topic-logger
 command = fsmrxbag -a
 path = /opt/bin/
@@ -56,7 +69,7 @@ ongoing = True
 criteria = 
 
 
-[component-5]
+[component-collector]
 name = collect-logs
 command = ls
 path = /bin/
@@ -68,9 +81,9 @@ blocking = True
 ongoing = False
 criteria = 
 
-[component-6]
+[component-xvfb]
 name = Xvfb
-command = Xvfb -screen 0 1024x768x24 -fbdir /tmp :100
+command = Xvfb -screen 0 1280x1024x24 :100
 path = /usr/bin/
 execution_host = localhost
 check_execution = True
@@ -80,9 +93,9 @@ blocking = True,True
 ongoing = True,False
 criteria = ,[dix]
 
-[component-7]
+[component-ffmpeg]
 name = ffmpeg
-command = ffmpeg -f x11grab -r 25 -s 1024x768 -i :100+nomouse $FSMDAT/screen.mp4
+command = avconv -f x11grab -r 5 -s 1280x1024 -i :100+nomouse $FSMVID/screen.mov
 path = /usr/bin/
 execution_host = localhost
 check_execution = True
@@ -97,8 +110,8 @@ criteria = ,Press ctrl-c to stop encoding
 [run]
 name = morse_startup
 namespace = http://my_namespace.com
-run_order = ('Xvfb', 'morse','ffmpeg','nav-stack','patroller','topic-logger'),
+run_order = ('roscore','Xvfb','morse','ffmpeg','nav-stack','patroller','topic-logger'),
 #run_order = ('morse',),
-run_execution_duration = 5
+run_execution_duration = 20
 result_assessment_order = ('collect-logs',),
 result_assessment_execution_duration = 1
