working version, removed Xvfb startup as it will be done by jenkins

--- a/fsm_testing/strands_patrol.ini
+++ b/fsm_testing/strands_patrol.ini
@@ -2,7 +2,7 @@
 #prefix = /vol/robocup/2013/
 #release_prefix = /
 #PKG_CONFIG_PATH = /usr/lib/pkgconfig
-DISPLAY=:100
+#DISPLAY=:100
 ROS_PORT=31232
 ROS_MASTER_URI=http://localhost:31232
 
@@ -58,8 +58,8 @@ criteria = ,Creating base movement client
 
 [component-rosbag]
 name = topic-logger
-command = fsmrxbag -a
-path = /opt/bin/
+command = rosbag record -a -o $FSMDAT/$FSMTRA.bag  
+path = /opt/ros/groovy/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid
@@ -95,7 +95,7 @@ criteria = ,[dix]
 
 [component-ffmpeg]
 name = ffmpeg
-command = avconv -f x11grab -r 5 -s 1280x1024 -i :100+nomouse $FSMVID/screen.mov
+command = avconv -f x11grab -r 5 -s 1280x1024 -i $DISPLAY+nomouse $FSMVID/screen.mp4
 path = /usr/bin/
 execution_host = localhost
 check_execution = True
@@ -110,7 +110,7 @@ criteria = ,Press ctrl-c to stop encoding
 [run]
 name = morse_startup
 namespace = http://my_namespace.com
-run_order = ('roscore','Xvfb','morse','ffmpeg','nav-stack','patroller','topic-logger'),
+run_order = ('roscore','morse','ffmpeg','nav-stack','patroller','topic-logger'),
 #run_order = ('morse',),
 run_execution_duration = 20
 result_assessment_order = ('collect-logs',),
