refer to WORKSPACE to find test.csv

--- a/fsm_testing/strands_patrol.ini
+++ b/fsm_testing/strands_patrol.ini
@@ -46,7 +46,7 @@ criteria = ,Received a
 
 [component-patroller]
 name = patroller
-command = roslaunch waypoint_patroller patroller.launch waypoints:=/home/marc/test.csv
+command = roslaunch waypoint_patroller patroller.launch waypoints:=$WORKSPACE/fsm_testing/test.csv
 path = /opt/ros/groovy/bin/
 execution_host = localhost
 check_execution = True
