change the patrol fsm test to be more configurable and actually based on the long-term patroller. It also now uses the datacentre, initialises it correctly, and dumps its content after the test into the output area (artefacts)

--- a/fsm_testing/strands_patrol.ini
+++ b/fsm_testing/strands_patrol.ini
@@ -4,8 +4,51 @@
 #PKG_CONFIG_PATH = /usr/lib/pkgconfig
 #DISPLAY=:100
 ROS_PORT=31232
+DATA_CENTRE_PORT=52345
+#ROSPKG=
+#ROSLAUNCH=
+
+# datacentre needs the variable HOSTNAME to be set, we use localhost here
+HOSTNAME=localhost
+DATA_CENTRE_PATH=$WORKSPACE/var/strands_datacentre
 ROS_MASTER_URI=http://localhost:31232
 
+[component-init]
+name = init
+command = bash -c ' if mkdir -p $DATA_CENTRE_PATH; then echo init completed; fi'
+path = /bin/
+execution_host = localhost
+check_execution = False
+check_type = stdout
+timeout = 5
+blocking = True
+ongoing = False
+criteria = init completed
+
+[component-insert-wp]
+name = insert-wp
+command = rosrun waypoint_recorder insert_in_db.py test.csv fsmpatrol testmap
+path = /opt/ros/groovy/bin/
+execution_host = localhost
+check_execution = False
+check_type = stdout
+timeout = 5
+blocking = True
+ongoing = False
+criteria = Using datacentre
+
+
+[component-datacentre]
+name = datacentre
+command = roslaunch strands_datacentre datacentre.launch db_path:=$DATA_CENTRE_PATH port:=$DATA_CENTRE_PORT
+path = /opt/ros/groovy/bin/
+execution_host = localhost
+check_execution = True
+check_type = pid,stdout
+timeout = 10,20
+blocking = True,True
+ongoing = True,False
+criteria = ,waiting for connections
 
 [component-roscore]
 name = roscore
@@ -32,17 +75,18 @@ blocking = True,True
 ongoing = True,False
 criteria = ,SCENE
 
-[component-nav]
-name = nav-stack
-command = roslaunch strands_morse uol_mht_nav2d.launch
+[component-roslaunch]
+name = roslaunch
+command = roslaunch $ROSPKG $ROSLAUNCH
 path = /opt/ros/groovy/bin/
 execution_host = localhost
 check_execution = True
-check_type = pid,stdout
-timeout = 10,30
-blocking = True,True
-ongoing = True,False
-criteria = ,Received a
+check_type = pid
+timeout = 10
+blocking = True
+ongoing = True
+criteria = 
+
 
 [component-patroller]
 name = patroller
@@ -69,29 +113,17 @@ ongoing = True
 criteria = 
 
 
-[component-collector]
-name = collect-logs
-command = ls
-path = /bin/
-execution_host = localhost
-check_execution = True
-check_type = pid
-timeout = 2
-blocking = True
-ongoing = False
-criteria = 
-
-[component-xvfb]
-name = Xvfb
-command = Xvfb -screen 0 1280x1024x24 :100
+[component-mongodump]
+name = mongodump
+command = mongodump -o $FSMDAT/mondodump --dbpath $DATA_CENTRE_PATH
 path = /usr/bin/
 execution_host = localhost
 check_execution = True
-check_type = pid,stdout
-timeout = 10,30
-blocking = True,True
-ongoing = True,False
-criteria = ,[dix]
+check_type = pid
+timeout = 5
+blocking = True
+ongoing = False
+criteria = 
 
 [component-ffmpeg]
 name = ffmpeg
@@ -110,8 +142,8 @@ criteria = ,Press ctrl-c to stop encoding
 [run]
 name = morse_startup
 namespace = http://my_namespace.com
-run_order = ('roscore','morse','ffmpeg','nav-stack','patroller','topic-logger'),
+run_order = ('roscore','init','morse','ffmpeg','datacentre','insert-wp','roslaunch'),
 #run_order = ('morse',),
-run_execution_duration = 20
-result_assessment_order = ('collect-logs',),
-result_assessment_execution_duration = 1
+run_execution_duration = 2
+result_assessment_order = ('mongodump',),
+result_assessment_execution_duration = 10
