Switched strands_datacentre to ros_datacentre in here.

--- a/fsm_testing/strands_patrol.ini
+++ b/fsm_testing/strands_patrol.ini
@@ -10,7 +10,7 @@ DATA_CENTRE_PORT=52345
 
 # datacentre needs the variable HOSTNAME to be set, we use localhost here
 HOSTNAME=localhost
-DATA_CENTRE_PATH=$WORKSPACE/var/strands_datacentre
+DATA_CENTRE_PATH=$WORKSPACE/var/ros_datacentre
 ROS_MASTER_URI=http://localhost:31232
 
 [component-init]
@@ -40,7 +40,7 @@ criteria = Using datacentre
 
 [component-datacentre]
 name = datacentre
-command = roslaunch strands_datacentre datacentre.launch db_path:=$DATA_CENTRE_PATH port:=$DATA_CENTRE_PORT
+command = roslaunch ros_datacentre datacentre.launch db_path:=$DATA_CENTRE_PATH port:=$DATA_CENTRE_PORT
 path = /opt/ros/groovy/bin/
 execution_host = localhost
 check_execution = True
