changed paths to hydro

--- a/fsm_testing/strands_patrol.ini
+++ b/fsm_testing/strands_patrol.ini
@@ -28,7 +28,7 @@ criteria = init completed
 [component-insert-wp]
 name = insert-wp
 command = rosrun waypoint_recorder insert_in_db.py test.csv fsmpatrol testmap
-path = /opt/ros/groovy/bin/
+path = /opt/ros/hydro/bin/
 execution_host = localhost
 check_execution = False
 check_type = stdout
@@ -41,7 +41,7 @@ criteria = Using datacentre
 [component-datacentre]
 name = datacentre
 command = roslaunch ros_datacentre datacentre.launch db_path:=$DATA_CENTRE_PATH port:=$DATA_CENTRE_PORT
-path = /opt/ros/groovy/bin/
+path = /opt/ros/hydro/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
@@ -53,7 +53,7 @@ criteria = ,waiting for connections
 [component-roscore]
 name = roscore
 command = roscore -p $ROS_PORT
-path = /opt/ros/groovy/bin/
+path = /opt/ros/hydro/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
@@ -65,7 +65,7 @@ criteria = ,started core service
 
 [component-morse]
 name = morse
-command = vglrun /opt/ros/groovy/bin/roslaunch strands_morse uol_mht_morse.launch
+command = vglrun /opt/ros/hydro/bin/roslaunch strands_morse uol_mht_morse.launch
 path = /usr/bin/
 execution_host = localhost
 check_execution = True
@@ -78,7 +78,7 @@ criteria = ,SCENE
 [component-roslaunch]
 name = roslaunch
 command = roslaunch $ROSPKG $ROSLAUNCH
-path = /opt/ros/groovy/bin/
+path = /opt/ros/hydro/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid
@@ -91,7 +91,7 @@ criteria =
 [component-patroller]
 name = patroller
 command = roslaunch waypoint_patroller patroller.launch waypoints:=$WORKSPACE/fsm_testing/test.csv
-path = /opt/ros/groovy/bin/
+path = /opt/ros/hydro/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid,stdout
@@ -103,7 +103,7 @@ criteria = ,Creating base movement client
 [component-rosbag]
 name = topic-logger
 command = rosbag record -a -o $FSMDAT/$FSMTRA.bag  
-path = /opt/ros/groovy/bin/
+path = /opt/ros/hydro/bin/
 execution_host = localhost
 check_execution = True
 check_type = pid
